2020-03-26  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm.jitter (smodi): Check that the provided index is
	in-range.

2020-03-26  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-rt.pk: Do not define `true' nor `false'.

2020-03-26  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_try_catch_stmt): Fix locations
	of errors.
	* testsuite/poke.pkl/try-catch-diag-4.pk: New test.
	* testsuite/poke.pkl/try-catch-diag-5.pk: Likewise.

2020-03-26  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/scons-53.pk: New test.
	* testsuite/poke.pkl/promo-array-arg-10.pk: Likewise.
	* testsuite/poke.pkl/promo-array-arg-11.pk: Likewise.
	* testsuite/poke.pkl/promo-array-arg-diag-8.pk: Likewise.

2020-03-26  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (Elf64_Sym): fix type of st_name.
	Adjust labels in st_info for endianness.

2020-03-25  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.h: Prototype for pkl_ast_array_type_remove_bounders.
	* src/pkl-ast.c (pkl_ast_array_type_remove_bounders): Define.
	* src/pkl-gen.c (pkl_gen_pr_type_array): Use
	pkl_ast_array_type_remove_bounders.

2020-03-25  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/scons-46.pk: New test.
	* testsuite/poke.pkl/scons-48.pk: Likewise.
	* testsuite/poke.pkl/scons-49.pk: Likewise.
	* testsuite/poke.pkl/scons-50.pk: Likewise.
	* testsuite/poke.pkl/scons-51.pk: Likewise.
	* testsuite/poke.pkl/scons-52.pk: Likewise.

2020-03-25  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks (struct_constructor): Promote struct constructor
	initializers that are arrays.

2020-03-24  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-trans.c (pkl_transl_pr_type_array): Remove.
	(pkl_transl_ps_type_array): Likewise.
	(pkl_transl_ps_var): Likewise.
	(pkl_phase_transl): Likewise.
	* src/pkl.c (rest_of_compilation): Remove lex pass.
	* src/pkl-ast.c (pkl_ast_type_promoteable): Handle general array
	types.
	* src/pkl-promo.c (pkl_promo_ps_scons): Promote array initializers