@@ -390,7 +390,7 @@ late-header-c
       }                                                                     \
       else if (JITTER_ARGN1 == 2)                                           \
       {                                                                     \
-        pvm_print_binary (val, JITTER_ARGN0, 1);                            \
+        pk_print_binary (val, JITTER_ARGN0, 1);                             \
         JITTER_DROP_STACK ();                                               \
         break;                                                              \
       }                                                                     \
@@ -435,7 +435,7 @@ late-header-c
       }                                                                     \
       else if (JITTER_ARGN1 == 2)                                           \
       {                                                                     \
-        pvm_print_binary (val, JITTER_ARGN0, 1);                            \
+        pk_print_binary (val, JITTER_ARGN0, 1);                             \
         JITTER_DROP_STACK ();                                               \
         break;                                                              \
       }                                                                     \
