@@ -1,5 +1,15 @@
 2020-03-26  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* src/pk-utils.h: Prototype for pk_print_binary moved from
+	pvm-val.h.
+	* src/pk-utils.c (pk_print_binary): Moved from pvm-val.c
+	* src/pvm.jitter (PVM_PRINTI): Call pk_print_binary instead of
+	pvm_print_binary.
+	(PVM_PRINTL): Likewise.
+	* src/pvm-val.c (pvm_print_val_1): Likewise.
+
+2020-03-26  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* src/pvm.jitter (smodi): Check that the provided index is
 	in-range.
 
